<resources>
    <string name="app_name">Portable Dog DIY</string>
    <string name="application_logo">Application logo</string>
    <string name="created_by">Created by: Levente Krizsán</string>
    <string name="neptun_code">HELLNQ</string>
    <string name="version">v1.0</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="year">2021 ©</string>
    <string name="beer_thumbnail_image">Beer thumbnail image</string>
    <string name="failed_to_load_beers">Failed to load beers.\n Please check your connection.</string>
    <string name="retry">Retry</string>
    <string name="add_new_beer">Add new beer</string>
    <string name="ingredients">Ingredients</string>
    <string name="malts">Malts</string>
    <string name="hops">Hops</string>
    <string name="instructions">Instructions</string>
    <string name="mash">Mash</string>
    <string name="fermentation">Fermentation</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="tagline">Tagline</string>
    <string name="yeast">Yeast</string>
    <string name="description">Description</string>
    <string name="abv">ABV</string>
    <string name="og">OG</string>
    <string name="volume">Volume</string>
    <string name="ibu">IBU</string>
    <string name="fg">FG</string>
    <string name="boil_volume">Boil Volume</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="temperature">Temperature</string>
    <string name="unit">Unit</string>
    <string name="quantity">Quantity</string>
    <string name="duration">Duration</string>
    <string name="about">About</string>

    <string name="abv_value">ABV: %1$.2f%%</string>
    <string name="ibu_value">IBU: %1$.2f</string>
    <string name="og_value">OG: %1$.2f</string>
    <string name="fg_value">FG: %1$.2f</string>
    <string name="volume_value">Volume: %1$s</string>
    <string name="boil_volume_value">Boil Volume: %1$s</string>
    <string name="yeast_value">Yeast: %1$s</string>
    <string name="mash_time_value">%1$d min</string>
    <string name="fermentation_value">Fermentation: %1$s</string>
    <string name="when">When</string>
    <string name="load_failed">Failed to load beer</string>
    <string name="delete_failed">Failed to delete beer</string>
    <string name="add_failed">Failed adding new beer</string>
    <string name="update_failed">Failed to update beer</string>
</resources>