<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="malt"
            type="dev.klevente.portabledogdiy.ui.edit.EditPresenter.EditMalt" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMaltName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMaltName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@={malt.name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMaltQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMaltQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/quantity"
                android:text="@={malt.quantity}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spMaltUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/unit"
            android:layout_gravity="center"
            android:selectedItemPosition="@={malt.unitOrdinal}"/>

        <Button
            android:id="@+id/btnDeleteMalt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:icon="@drawable/ic_baseline_delete_outline_24"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly" />

    </LinearLayout>
</layout>