<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hop"
            type="dev.klevente.portabledogdiy.ui.edit.EditPresenter.EditHop" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHopName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:text="@={hop.name}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnDeleteHop"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:icon="@drawable/ic_baseline_delete_outline_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHopQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHopQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:inputType="numberDecimal"
                    android:text="@={hop.quantity}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spHopUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/unit"
                android:layout_gravity="center"
                android:selectedItemPosition="@={hop.unitOrdinal}"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHopWhen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHopWhen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/when"
                    android:text="@={hop.add}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</layout>